--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -64,6 +64,16 @@
     font-size: 0.75rem;
     padding: 0.625rem;
 }
+.selector-drop {
+    /*  */
+    border: 0.08rem solid gray;
+    width: 100px;
+    height: 40px;
+    margin-right: 20px;
+    border-radius: 5px;
+    padding: 4px;
+
+}
 table {
     width: 100%;
     margin: auto;
