--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -57,6 +57,23 @@
     border-radius: 0.375rem;
     border: 1px solid gray;
 }
+
+.dashboard-content-search-2 {
+    font-weight: 400;
+    margin-top: 10px;
+    line-height: 1.4em;
+    letter-spacing: 0.009em;
+    box-sizing: border-box;
+    cursor: text;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+    background-color: transparent;
+    font-size: 0.875rem;
+    border-radius: 0.375rem;
+    border: 1px solid gray;
+}
 .dashboard-content-search:focus {
     outline: #2D83B5 auto 1px;
 }
